--- a/WebAppAugPreDemo/Pages/Index.cshtml
+++ b/WebAppAugPreDemo/Pages/Index.cshtml
@@ -19,6 +19,7 @@
     <p class="mb-0">Whenever you need to, be sure to use margin utilities to keep things nice and tidy.</p>
 </div>
 
+@*Comment*@ 
 
 @*This is the slider section*@ 
 
