--- a/WebAppAugPreDemo/Pages/Index.cshtml
+++ b/WebAppAugPreDemo/Pages/Index.cshtml
@@ -23,7 +23,7 @@
 
 @*This is the slider section*@ 
 
-@*<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
         <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
         <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
@@ -60,4 +60,4 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
     </a>
-</div>*@
+</div>
