--- a/WebAppAugPreDemo/Pages/Index.cshtml
+++ b/WebAppAugPreDemo/Pages/Index.cshtml
@@ -61,3 +61,7 @@
         <span class="sr-only">Next</span>
     </a>
 </div>
+
+<div class="spinner-border text-primary" role="status">
+  <span class="sr-only">Loading...</span>
+</div>
